--- a/index.html
+++ b/index.html
@@ -122,17 +122,7 @@
                         />
                     </svg>
                 </button>
-            </div>
-            <!-- <div class="mobile-menu">
-                <button
-                    class="mobile-menu__btn-close menu-btn-close"
-                    type="button"
-                >
-                    <svg class="mobile-menu__icon-close" width="24" height="24">
-                        <use href="./images/icons.svg#icon-iconClose"></use>
-                    </svg>
-                </button>
-            </div> -->
+            </div>            
         </header>
         <main>
             <section class="hero">
@@ -141,32 +131,40 @@
                     <h1 class="hero__title colored">beauty zone</h1>
                     <button class="hero__btn btn">Замовити дзвінок</button>
                     <p class="hero__text">
-                        Запишись та отримай безкоштовну <br />консультацію
+                        Запишись та отримай безкоштовну консультацію
                         нашого косметолога
                     </p>
                 </div>
             </section>
             <section class="about">
                 <div class="about__container">
-                    <h2 class="about__title" id="about">
-                        Перевтілюйтесь в
-                        <span class="colored">beauty zone!</span>
-                    </h2>
-                    <p class="about__subtitle">
-                        Наша косметологічна клініка пропонує вам професійні
-                        послуги з догляду за шкірою обличчя та тіла.
-                    </p>
-                    <p class="about__text">
-                        B <span class="strong">beauty zone</span> ми гарантуємо
-                        найвищі стандарти якості та приємний сервіс. Наші
-                        косметологічні процедури та препарати допоможуть вам
-                        підтримувати свою красу та молодість. <br />
-                        З нами краса назавжди!
-                    </p>
+                    <div class="about__content">
+                        <h2 class="about__title" id="about">
+                            Перевтілюйтесь в
+                            <span class="colored">beauty zone!</span>
+                        </h2>
+                        <p class="about__subtitle">
+                            Наша косметологічна клініка пропонує вам професійні
+                            послуги з догляду за шкірою обличчя та тіла.
+                        </p>
+                        <p class="about__text">
+                            B <span class="strong">beauty zone</span> ми гарантуємо
+                            найвищі стандарти якості та приємний сервіс. Наші
+                            косметологічні процедури та препарати допоможуть вам
+                            підтримувати свою красу та молодість. <br />
+                            З нами краса назавжди!
+                        </p>
+                        <svg class="about__icon">
+                            <use href="./images/icons.svg#icon-Star"></use>
+                        </svg>
+                    </div>
+                
+                <div class="about__images">
+                    <img src="./images/facedown.jpg" alt="Face" class="about__image">
+                    <img src="./images/faceup.jpg" alt="Face" class="about__image second">
                 </div>
-                <svg class="about__icon">
-                    <use href="./images/icons.svg#icon-Star"></use>
-                </svg>
+            </div>
+                
             </section>
             <section class="choose">
                 <div class="choose__container">
