--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                             підтримувати свою красу та молодість. <br />
                             З нами краса назавжди!
                         </p>
-                        <svg class="about__icon">
+                        <svg class="about__icon-1">
                             <use href="./images/icons.svg#icon-Star"></use>
                         </svg>
                     </div>
@@ -162,139 +162,147 @@
                 <div class="about__images">
                     <img src="./images/facedown.jpg" alt="Face" class="about__image">
                     <img src="./images/faceup.jpg" alt="Face" class="about__image second">
+                    <svg class="about__icon-2">
+                        <use href="./images/icons.svg#icon-Star"></use>
+                    </svg>
+                    <svg class="about__icon-3">
+                        <use href="./images/icons.svg#icon-Star"></use>
+                    </svg>
                 </div>
             </div>
                 
             </section>
-            <section class="choose">
-                <div class="choose__container">
-                    <h2 class="choose__title" id="why">
-                        Чому люди <br /><span class="colored"
-                            >обирають нас</span
-                        >
-                    </h2>
-                    <div class="choose__cards">
-                        <div class="choose__card">
-                            <svg class="icon" width="48" height="48">
-                                <use
-                                    href="./images/icons.svg#icon-rounds"
-                                ></use>
-                            </svg>
-                            <p class="choose__card-text">
-                                Всі наші косметологи мають вищу медичну освіту
-                                та стаж роботи від 5 років
-                            </p>
-                        </div>
-                        <div class="choose__card">
-                            <svg class="icon" width="48" height="48">
-                                <use href="./images/icons.svg#icon-stuff"></use>
-                            </svg>
-                            <p class="choose__card-text">
-                                Використовуємо тільки професійне обладнання та
-                                косметику, перевірену часом
-                            </p>
-                        </div>
-                        <div class="choose__card">
-                            <svg class="icon" width="48" height="48">
-                                <use href="./images/icons.svg#icon-crown"></use>
-                            </svg>
-                            <p class="choose__card-text">
-                                Наша мета - підкреслити переваги та приховати
-                                недоліки, а не переробити
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <section class="procedures">
-                <div class="procedures__container">
-                    <h2 class="procedures__title" id="procedures">
-                        Наші <span class="colored">процедури</span>
-                    </h2>
-                    <div class="procedures__content">
-                        <button class="carusel">
-                            <svg class="carusel-arrow" width="17" height="'17">
-                                <use href="./images/icons.svg#icon-Arrow"></use>
-                            </svg>
-                        </button>
-                        <div class="procedures__cards">
-                            <div class="procedures__card">
-                                <div class="procedures__card-container">
-                                    <img
-                                        src="./images/maskFace.jpg"
-                                        alt="Mask"
-                                        class="procedures__card-image"
-                                    />
-                                    <span class="procedures__card-text"
-                                        >Маски для обличчя</span
-                                    >
-                                </div>
+            <div class="wrapper">
+                <section class="choose">
+                    <div class="choose__container">
+                        <h2 class="choose__title" id="why">
+                            Чому люди <br /><span class="colored"
+                                >обирають нас</span
+                            >
+                        </h2>
+                        <div class="choose__cards">
+                            <div class="choose__card">
+                                <svg class="icon" width="48" height="48">
+                                    <use
+                                        href="./images/icons.svg#icon-rounds"
+                                    ></use>
+                                </svg>
+                                <p class="choose__card-text">
+                                    Всі наші косметологи мають вищу медичну освіту
+                                    та стаж роботи від 5 років
+                                </p>
                             </div>
-                            <div class="procedures__card">
-                                <div class="procedures__card-container">
-                                    <img
-                                        src="./images/needleFace.jpg"
-                                        alt="Mask"
-                                        class="procedures__card-image"
-                                    />
-                                    <span class="procedures__card-text"
-                                        >Ін'єкції для обличчя</span
-                                    >
-                                </div>
+                            <div class="choose__card">
+                                <svg class="icon" width="48" height="48">
+                                    <use href="./images/icons.svg#icon-stuff"></use>
+                                </svg>
+                                <p class="choose__card-text">
+                                    Використовуємо тільки професійне обладнання та
+                                    косметику, перевірену часом
+                                </p>
                             </div>
-                            <div class="procedures__card">
-                                <div class="procedures__card-container">
-                                    <img
-                                        src="./images/spatulaFace.jpg"
-                                        alt="Mask"
-                                        class="procedures__card-image"
-                                    />
-                                    <span class="procedures__card-text"
-                                        >Очищення обличчя</span
-                                    >
-                                </div>
+                            <div class="choose__card">
+                                <svg class="icon" width="48" height="48">
+                                    <use href="./images/icons.svg#icon-crown"></use>
+                                </svg>
+                                <p class="choose__card-text">
+                                    Наша мета - підкреслити переваги та приховати
+                                    недоліки, а не переробити
+                                </p>
                             </div>
                         </div>
-                        <button class="carusel carusel-right">
-                            <svg class="carusel-arrow" width="17" height="'17">
-                                <use href="./images/icons.svg#icon-Arrow"></use>
+                    </div>
+                </section>
+                <section class="procedures">
+                    <div class="procedures__container">
+                        <h2 class="procedures__title" id="procedures">
+                            Наші <span class="colored">процедури</span>
+                        </h2>
+                        <div class="procedures__content">
+                            <button class="carusel">
+                                <svg class="carusel-arrow" width="17" height="'17">
+                                    <use href="./images/icons.svg#icon-Arrow"></use>
+                                </svg>
+                            </button>
+                            <div class="procedures__cards">
+                                <div class="procedures__card">
+                                    <div class="procedures__card-container">
+                                        <img
+                                            src="./images/maskFace.jpg"
+                                            alt="Mask"
+                                            class="procedures__card-image"
+                                        />
+                                        <span class="procedures__card-text"
+                                            >Маски для обличчя</span
+                                        >
+                                    </div>
+                                </div>
+                                <div class="procedures__card">
+                                    <div class="procedures__card-container">
+                                        <img
+                                            src="./images/needleFace.jpg"
+                                            alt="Mask"
+                                            class="procedures__card-image"
+                                        />
+                                        <span class="procedures__card-text"
+                                            >Ін'єкції для обличчя</span
+                                        >
+                                    </div>
+                                </div>
+                                <div class="procedures__card">
+                                    <div class="procedures__card-container">
+                                        <img
+                                            src="./images/spatulaFace.jpg"
+                                            alt="Mask"
+                                            class="procedures__card-image"
+                                        />
+                                        <span class="procedures__card-text"
+                                            >Очищення обличчя</span
+                                        >
+                                    </div>
+                                </div>
+                            </div>
+                            <button class="carusel carusel-right">
+                                <svg class="carusel-arrow" width="17" height="'17">
+                                    <use href="./images/icons.svg#icon-Arrow"></use>
+                                </svg>
+                            </button>
+                        </div>
+                        <div class="carusel-nav">
+                            <svg
+                                class="carusel-dot dot-active"
+                                xmlns="http://www.w3.org/2000/svg"
+                                width="12"
+                                height="11"
+                                viewBox="0 0 12 11"
+                                fill="none"
+                            >
+                                <circle cx="6" cy="5.5" r="5.5" />
                             </svg>
-                        </button>
+                            <svg
+                                class="carusel-dot"
+                                xmlns="http://www.w3.org/2000/svg"
+                                width="12"
+                                height="11"
+                                viewBox="0 0 12 11"
+                                fill="none"
+                            >
+                                <circle cx="6" cy="5.5" r="5.5" />
+                            </svg>
+                            <svg
+                                class="carusel-dot"
+                                xmlns="http://www.w3.org/2000/svg"
+                                width="12"
+                                height="11"
+                                viewBox="0 0 12 11"
+                                fill="none"
+                            >
+                                <circle cx="6" cy="5.5" r="5.5" />
+                            </svg>
+                        </div>
                     </div>
-                    <div class="carusel-nav">
-                        <svg
-                            class="carusel-dot dot-active"
-                            xmlns="http://www.w3.org/2000/svg"
-                            width="12"
-                            height="11"
-                            viewBox="0 0 12 11"
-                            fill="none"
-                        >
-                            <circle cx="6" cy="5.5" r="5.5" />
-                        </svg>
-                        <svg
-                            class="carusel-dot"
-                            xmlns="http://www.w3.org/2000/svg"
-                            width="12"
-                            height="11"
-                            viewBox="0 0 12 11"
-                            fill="none"
-                        >
-                            <circle cx="6" cy="5.5" r="5.5" />
-                        </svg>
-                        <svg
-                            class="carusel-dot"
-                            xmlns="http://www.w3.org/2000/svg"
-                            width="12"
-                            height="11"
-                            viewBox="0 0 12 11"
-                            fill="none"
-                        >
-                            <circle cx="6" cy="5.5" r="5.5" />
-                        </svg>
-                    </div>
-                </div>
-            </section>
+                </section>
+            </div>
             <section class="find">
                 <div class="find__container">
                     <h2 class="find__title" id="find">
@@ -494,14 +502,17 @@
                             </li>
                         </ul>
                     </div>
-                    <li class="menu__item last-item">
+                    <li class="menu__item confidential-desktop">
                         <a href="#" class="menu__link footer-menu">
                             Політика конфіденційності
                         </a>
+                        <span class="rights">© 2022 Дані захищені</span>
                     </li>
-                    <span class="rights">© 2022 Дані захищені</span>
+                    <span class="rights-mobile">© 2022 Дані захищені</span>
+                    
                 </nav>
             </div>
+            <img src="./images/footerbg.png" alt="stuff" class="footer__bg">
         </footer>
 
         <div class="backdrop visually-hidden">
