--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>Beauty Zone</title>
     </head>
     <body>
-        <header class="header test">
+        <header class="header">
             <div class="header__container">
                 <nav class="header__nav">
                     <a href="#" class="logo">
