--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
             property="og:image"
             content="https://github.com/Natika888/beautyZone/tree/main/images/background.png"
         />
+        <meta property="og:image:width" content="800" />
+        <meta property="og:image:height" content="400" />
         <link rel="stylesheet" href="./css/main.min.css" />
         <title>Beauty Zone</title>
         <link
