--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta property="og:title" content="Beauty Zone" />
-        <meta
+        <meta property="title" content="Beauty Zone" />
+        <meta name="description" content="Описание сайта" />
+        <!-- <meta
             property="og:image"
             content="https://github.com/Natika888/beautyZone/tree/main/images/background.png"
-        />
-        <meta property="og:image:width" content="800" />
-        <meta property="og:image:height" content="400" />
+        /> -->
+        <!-- <meta property="og:image:width" content="800" />
+        <meta property="og:image:height" content="400" /> -->
         <link rel="stylesheet" href="./css/main.min.css" />
         <title>Beauty Zone</title>
         <link
